--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -204,7 +204,7 @@ footer .box:last-child {
 img {
   /* max-width: 100%; */
 
-  filter: drop-shadow(0px 16px 32px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
 button {
@@ -216,7 +216,33 @@ h3.content {
 }
 
 .video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: -200px;
+
   text-align: center;
+}
+
+.video .inner {
+  position: relative;
+}
+
+.video h2 {
+  margin-bottom: 30px;
+}
+
+.video p {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.video iframe {
+  display: block;
+  max-width: 100%;
+
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
 /* END layout */
@@ -253,6 +279,7 @@ body {
   top: -55px;
   right: -270px;
   z-index: 0;
+
   height: 525px;
 }
 
