--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -151,7 +151,7 @@ footer .inner {
 
 img {
   /* max-width: 100%; */
-
+  display: block;
   filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
@@ -309,7 +309,17 @@ nav h2 {
 
 /* SECTIONS COMMON */
 
-p.intro:first-child {
+.box h2 {
+  padding: 0;
+  margin: 0;
+}
+
+.lead {
+  margin: 0;
+  padding: 0;
+}
+
+p.intro{
   margin-top: 20px;
 }
 
