--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -265,6 +265,7 @@ a.more:focus {
   display: block;
   max-width: 100%;
 
+  border: 0;
   filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
