--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
 }
 
-/* SMALL RESET */
 html,
 body {
   margin: 0;
@@ -115,14 +114,16 @@ h3.text-block {
   font-size: 28px;
 }
 
-::placeholder {
-  font-weight: 400;
-  font-size: small;
-  font-family: OpenSans, sans-serif;
+.page-info-additional {
+  font-size: 14px;
 }
 
+.small {
+  font-size: 12px;
+}
+
+::placeholder,
 ::-ms-input-placeholder {
-  /* Microsoft Edge */
   font-weight: 400;
   font-size: small;
   font-family: OpenSans, sans-serif;
@@ -141,22 +142,17 @@ footer {
   padding: 100px 0;
 }
 
-header .inner,
-section .inner,
-nav .inner,
-footer .inner {
+header > .inner,
+section > .inner,
+nav > .inner,
+footer > .inner {
   max-width: var(--content-max-width);
   margin: 0 auto;
 }
 
 img {
-  /* max-width: 100%; */
   display: block;
   filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
-}
-
-button {
-  border: 0;
 }
 
 h3.text-block {
@@ -172,15 +168,15 @@ h3.text-block {
   flex-wrap: wrap;
 }
 
-.container .box {
+.container > .box {
   flex: 1;
 }
 
-.container .box:first-child {
+.container > .box:first-child {
   padding-right: 15px;
 }
 
-.container .box:last-child {
+.container > .box:last-child {
   padding-left: 15px;
 }
 
@@ -331,13 +327,7 @@ p.intro:last-child {
 /* FOOTER */
 
 footer .container {
-  display: flex;
-  flex-wrap: wrap;
   padding: 0 55px;
-}
-
-footer .box {
-  flex: 1;
 }
 
 footer .box:first-child {
@@ -359,7 +349,42 @@ footer h3 {
   margin-bottom: 0;
 }
 
-/* links in footer */
+/* FOOTER formular */
+
+footer label {
+  display: block;
+  margin-bottom: 12px;
+}
+
+.send-email {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+input[type="email"] {
+  flex: 1 1 auto;
+  height: 50px;
+  padding: 15px;
+
+  border: 0;
+}
+
+.send-email button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 50px;
+
+  border: 0;
+  cursor: pointer;
+}
+
+footer form p:last-child {
+  margin: 0;
+}
+
+/* FOOTER links */
 
 form a:link,
 form a:visited {
@@ -394,11 +419,13 @@ body {
 }
 
 button {
-  border: 0;
-
   color: var(--white);
 
   background-color: var(--primary);
+}
+
+button:hover {
+  background-color: var(--primary-additional);
 }
 
 footer {
@@ -412,6 +439,7 @@ footer .container {
 }
 
 /* THEMES */
+
 .theme-color-white {
   background-color: var(--white);
 }
@@ -468,18 +496,10 @@ footer .container {
 }
 
 /* ADDITIONAL CLASSES FOR COLORS */
-::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
+::placeholder,
+::-ms-input-placeholder  {
   color: var(--grey-light);
-
   opacity: 1;
-
-  /* opacity is for Firefox */
-}
-
-::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: var(--grey-light);
 }
 
 .emphasis {
